--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
 <html lang="en" latam-theme="dark">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dota2 Latam</title>
-  </head>
-  <body>
+    <meta name="description" content="Todo sobre Dota 2 en Latinoamérica: noticias, guías, eventos y más." />
+    <meta name="keywords" content="Dota 2, noticias, Latinoamérica, guías Dota 2, eventos Dota 2" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Dota 2 Latam" />
+    <meta property="og:description"
+        content="Mantente actualizado con las últimas noticias y eventos de Dota 2 en Latinoamérica." />
+    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:url" content="https://www.tusitio.com" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="canonical" href="https://www.tusitio.com" />
+    <title>Dota2 Latam | Noticias, Guías y Comunidad</title>
+
+    <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "WebPage",
+            "headline": "Dota 2 en Latinoamérica",
+            "description": "Mantente actualizado con las últimas noticias de Dota 2 en Latinoamérica.",
+            "publisher": {
+              "@type": "Organization",
+              "name": "Dota2 Latam"
+            }
+          }
+        </script>
+</head>
+
+<body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <script type="module" src="/src/main.ts" async></script>
+</body>
+
 </html>
